    numbers of rgl scenes can be present on a single
    web page without exhausting it.
  - The worker functions used by subdivision3d() have
    been exported for use on their own.
  - The rglwidget code now supports textures on spheres.  
    It now uses the same mesh as the one used inside R. 
    (The lack of support was pointed out by Justin McManus.)
    
0.97.0
  - Fixed bug in conversion of bounding box decorations
    used in rglwidget().
  - Added "fixedSize" argument to rgl.sprites() and related
    functions.
  - Added plotmath3d() function, and set text3d() to
    use it when necessary.
  - addNormals() gave an error if the mesh it was working
    with had degenerate triangles or quads.  (Reported
    by Rolf Turner and Graham Griffiths.)
  - Auto-clipping sometimes changed result vectors into
    lists.
  - The controllers did not recycle some values correctly.
  - Fixed bug in initialization of playwidgets.
  - material3d() now silently ignores attempts to set
    read-only properties.
  - Added setUserShaders() for user-specified shaders
    (currently for WebGL only).
  - Added support for two-sided surfaces in WebGL.
  - Fixed some bugs in pch3d() (reported by Gina Joue).
  - Added demo("rglExamples") to display all the examples
    in the rgl help in a collection of web pages.
    This showed up a number of small bugs, which have been
    fixed.
  - movie3d() now optionally tries the R "magick" package first,
    then the external ImageMagick v7 command "magick" 
    before trying "convert".  (The external change
    suggested by Earl F. Glynn.)
  - par3d() reports on the version of OpenGL that it sees
    (as component "glVersion").

0.97.1546
  - Cleaned up configure script.
  - Cleaned up dynamic entry points.
  - Added "add = FALSE" argument to persp3d.deldir().
  - layout3d() handled multi-row cells incorrectly.  (Reported
    by Felix Carbonell.)
  - Fixed a bug in subsetControl(), and added
    toggleWidget()